# ra-rom-manager

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  REQUIREMENTS.md  issues.json  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: mock_ra_data.json  rom_report.csv
docs/: ARCHITECTURE.md
src/ra_manager/: api_client.py  cache.py  config.py  exporter.py  matcher.py  renamer.py  scanner.py  stats.py
src/ra_rom_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api_client.py  test_cache.py  test_exporter.py  test_matcher.py  test_stats.py
tests/fixtures/: mock_ra_data.json
tutorial/: ADDING_A_NEW_CONSOLE.md
